[tool.poetry]
name = "firetester"
version = "0.1.0"
description = "firewall testing"
authors = ["K0z4c"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ipaddress = "^1.0.23"
scapy = "^2.4.5"
luigi = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
